# Team-Rover

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/gps/share/gps/: package.sh  package.xml
install/ld08_driver/lib/ld08_driver/: ld08_driver
install/ld08_driver/share/ld08_driver/: local_setup.sh  package.bash  package.sh  package.zsh
install/rover/share/rover/: package.sh  package.xml
log/: latest_build
setup/: rover_sensor.rules  setup.sh  vn_sensor.rules
src/gps/: package.xml  setup.py
src/gps/gps/: gps_reader.py  standalone_driver.py
src/gps/launch/: rtk_driver.launch  standalone_driver.launch
src/gps/msg/: Customgps.msg  Customrtk.msg
src/gps/python/: gps_reader.py  rtk_driver.py  standalone_driver.py
src/lidar/: package.xml  setup.py
src/lidar/launch/: driver.launch
src/lidar/python/: driver.py  lidar.py
src/lora/: reception.py  transmission.ino
src/rover/: localization.py  package.xml  setup.py
src/rover/launch/: gps_and_vn.launch
src/rover/msg/: Localization.msg
src/rover/rover/: control_node.py  localization.py  localization_node.py  obstacle_detector.py  obstacle_detector_node.py  path_planning_node.py  test_path_planning.py
src/rover_msgs/: CMakeLists.txt  package.xml
src/rover_msgs/msg/: CircleObstacle.msg  Customgps.msg  LoRa.msg  Localization.msg  Obstacles.msg  PathPlanning.msg  Vectornav.msg
src/vn/: package.xml  setup.cfg  setup.py
src/vn/launch/: driver.launch
src/vn/msg/: Vectornav.msg
src/vn/python/: driver.py
src/vn/vn/: driver.py  vectornav.py
(+7 files in other folders)
