<?xml version="1.0"?>
<package format="2">
  <name>rover</name>
  <version>0.0.0</version>
  <description>The rover package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gps</build_depend>
  <build_depend>vn</build_depend>
  <build_export_depend>gps</build_export_depend>
  <build_export_depend>vn</build_export_depend>
  <exec_depend>gps</exec_depend>
  <exec_depend>vn</exec_depend>

  <export>
  </export>
</package>
